Refactor README.md and common.yaml for clarity and logging level adjustment

--- a/common/common.yaml
+++ b/common/common.yaml
@@ -49,14 +49,10 @@ button:
   - platform: restart
     name: $device_name Restart
     icon: "mdi:restart"
-ota:
-  - platform: esphome
-    password: !secret ota_pwd
-    safe_mode: True
+
 logger:
-  level: DEBUG
-api:
-  password: !secret api_pwd
+  level: INFO
+
 web_server:
   port: 80
 
